--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.6",
     "nextjs-simple-typewriter": "^5.2.2",
     "react": "^19.0.0",
+    "react-css-spinners": "^4.0.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
