--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "framer-motion": "^12.4.13",
     "next": "15.1.6",
     "nextjs-simple-typewriter": "^5.2.2",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-css-spinners": "^4.0.2",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
